--- a/style.css
+++ b/style.css
@@ -3,7 +3,14 @@ Theme name: Custom Theme
 Author: Samuil
 */
 
+#map
+{
+    height: 100%;
+}
+
 body 
 {
-    background-color: grey;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
