--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ Author: Samuil
 
 #map
 {
-    height: 100%;
+    height: 500px;
 }
 
 body 
 {
-    height: 100%;
+    height: 500px;
     margin: 0;
     padding: 0;
 }
